Fixes - Fixed button contrast issues - Adjusted button text color in installer - Fixed wrong button background color in installer - Made primary buttons (emphasis) have emphasis-text as text color

--- a/src/wwwroot/css/installer.css
+++ b/src/wwwroot/css/installer.css
@@ -123,8 +123,8 @@
 }
 .theme_preview_ctp_mocha .button_example {
     border: 1px solid #313244;
-    background-color: #fab387;
-    color: #1e1e2e;
+    background-color: #585b70;
+    color: #cdd6f4;
 }
 .theme_preview_ctp_macchiato {
     background-color: #181926;
@@ -132,8 +132,8 @@
 }
 .theme_preview_ctp_macchiato .button_example {
     border: 1px solid #363a4f;
-    background-color: #f5a97f;
-    color: #24273a;
+    background-color: #5b6078;
+    color: #cad3f5;
 }
 .theme_preview_ctp_frappe {
     background-color: #232634;
@@ -141,8 +141,8 @@
 }
 .theme_preview_ctp_frappe .button_example {
     border: 1px solid #414559;
-    background-color: #ef9f76;
-    color: #303446;
+    background-color: #626880;
+    color: #c6d0f5;
 }
 .theme_preview_ctp_latte {
     background-color: #dce0e8;
@@ -150,8 +150,8 @@
 }
 .theme_preview_ctp_latte .button_example {
     border: 1px solid #ccd0da;
-    background-color: #fe640b;
-    color: #11111b;
+    background-color: #acb0be;
+    color: #4c4f69;
 }
 label {
     font-size: 120%;
